diesel_compile_tests/tests/fail/distinct_on_requires_matching_order_clause.stderr
error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<columns::id>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:113:58
    |
113 |     let _ = users::table.order_by(users::id).distinct_on(users::name);
    |                                              ----------- ^^^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::OrderClause<columns::id>>: DistinctOnDsl<_>`
    |                                              |
    |                                              required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, NoDistinctClause, ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
    |     where
    |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:117:73
    |
117 |     let _ = users::table.order_by((users::id, users::name)).distinct_on(users::name);
    |                                                             ----------- ^^^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>>: DistinctOnDsl<_>`
    |                                                             |
    |                                                             required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, NoDistinctClause, ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
    |     where
    |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:123:22
    |
123 |         .distinct_on(users::name);
    |          ----------- ^^^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>>: DistinctOnDsl<_>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, NoDistinctClause, ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
    |     where
    |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<columns::id>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:127:60
    |
127 |     let _ = users::table.distinct_on(users::name).order_by(users::id);
    |                                                   -------- ^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>: OrderDsl<_>`
    |                                                   |
    |                                                   required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, DistinctOnClause<name>>` to implement `OrderDsl<columns::id>`
note: required by a bound in `order_by`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn order_by<Expr>(self, expr: Expr) -> OrderBy<Self, Expr>
    |        -------- required by a bound in this associated function
...
    |         Self: methods::OrderDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::order_by`
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<columns::id>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:130:58
    |
130 |     let _ = users::table.order_by(users::id).distinct_on(users::name).into_boxed();
    |                                              ----------- ^^^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::OrderClause<columns::id>>: DistinctOnDsl<_>`
    |                                              |
    |                                              required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, NoDistinctClause, ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
    |     where
    |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:136:22
    |
136 |         .distinct_on(users::name)
    |          ----------- ^^^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>>: DistinctOnDsl<_>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, NoDistinctClause, ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
    |     where
    |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(columns::name, columns::id)>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:143:22
    |
143 |         .distinct_on((users::name, users::id))
    |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(columns::name, columns::id)>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>>: DistinctOnDsl<_>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, NoDistinctClause, ..., ...>` to implement `DistinctOnDsl<(columns::name, columns::id)>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
    |     where
    |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<columns::id>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(columns::name, columns::id)>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:150:22
    |
150 |         .distinct_on((users::name, users::id))
    |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(columns::name, columns::id)>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::OrderClause<columns::id>>: DistinctOnDsl<_>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, NoDistinctClause, ..., ...>` to implement `DistinctOnDsl<(columns::name, columns::id)>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
    |     where
    |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:157:22
    |
157 |         .distinct_on(users::name)
    |          ----------- ^^^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>>: DistinctOnDsl<_>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, NoDistinctClause, ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
    |     where
    |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<columns::id>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:164:19
    |
164 |         .order_by(users::id)
    |          -------- ^^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>: OrderDsl<_>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2, T3, T4)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1)>>>
              <diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T0>> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(T0, T1, T2)>>>
            and $N others
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, DistinctOnClause<name>>` to implement `OrderDsl<columns::id>`
note: required by a bound in `order_by`
   --> $DIESEL/src/query_dsl/mod.rs
    |
    |     fn order_by<Expr>(self, expr: Expr) -> OrderBy<Self, Expr>
    |        -------- required by a bound in this associated function
...
    |         Self: methods::OrderDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::order_by`
    = note: consider using `--verbose` to print the full type name to the console
